--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,52 @@
-# Discord bot files (contain sensitive tokens)
-lootable_bot.py
-*.py
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Virtual environments
+venv/
+env/
+ENV/
 
-# IDE files
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Bot tokens and sensitive data
+config.py
+secrets.py
+*.token
+
+# Logs
+*.log
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# Logs
-*.log
+# OS
+.DS_Store
+Thumbs.db
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.local
-.env.production
-
-# Local development files
-local/
-temp/
-
-# Sensitive data files
-*.json
-config.json
-secrets.json
+# Bot data
+plots.json
